--- a/default.yml
+++ b/default.yml
@@ -25,3 +25,7 @@ org_settings:
   features:
     enable_host_users: true
     enable_software_inventory: true
+  webhook_settings:
+    activities_webhook:
+      enable_activities_webhook: true
+      destination_url: https://webhook.site/54e25127-5d6f-4ad5-aef9-8e431a201e08
