--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -12,6 +12,7 @@ policies:
   - path: ../lib/macos/policies/macos-device-health.policies.yml
   - path: ../lib/windows/policies/windows-device-health.policies.yml
   - path: ../lib/linux/policies/linux-device-health.policies.yml
+  - path: ../lib/windows/policies/all-windows-updates-installed.policies.yml
 queries:
   - path: ../lib/all/queries/collect-usb-devices.queries.yml
   - path: ../lib/all/queries/collect-failed-login-attempts.queries.yml
@@ -33,6 +34,13 @@ controls:
 team_settings:
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
+  webhook_settings:
+    failing_policies_webhook:
+      enable_failing_policies_webhook: true
+      destination_url: https://webhook.site/54e25127-5d6f-4ad5-aef9-8e431a201e08
+      host_batch_size: 0
+      policy_ids:
+        - 2840
   features:
     enable_host_users: true
     enable_software_inventory: true
